[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/white_arrow.png" type="Texture" id=1]
[ext_resource path="res://Sprites/dark_gray_arrow.png" type="Texture" id=2]
[ext_resource path="res://Sprites/white_pixel.png" type="Texture" id=3]
[ext_resource path="res://Scripts/MobileController.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 640 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36, 640 )

[node name="MobileController" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.392157, 0.392157, 0.419608, 0.392157 )
margin_top = 576.0
margin_right = 360.0
margin_bottom = 640.0
texture = ExtResource( 3 )
expand = true

[node name="LeftButton" type="TouchScreenButton" parent="."]
position = Vector2( 0, 576 )
normal = ExtResource( 1 )
pressed = ExtResource( 2 )
shape = SubResource( 1 )

[node name="RightButton" type="TouchScreenButton" parent="."]
position = Vector2( 360, 640 )
rotation = 3.14159
normal = ExtResource( 1 )
pressed = ExtResource( 2 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="released" from="LeftButton" to="." method="_on_LeftButton_released"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="released" from="RightButton" to="." method="_on_RightButton_released"]
